--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,6 +42,12 @@ security:
         - { path: ^/logout, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/profile, roles: ROLE_USER }
 
+# User : 
+
+# email : k.dallas@hotmail.com
+# Pseudo : Korben
+# Password : Multipass
+
     role_hierarchy:
         ROLE_ADMIN: ROLE_MODO
         ROLE_MODO: ROLE_USER
