--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    imageUpload: '%kernel.project_dir%/public/img/upload'
+    pictureUpload: '%kernel.project_dir%/public/img/upload'
 
 doctrine:
      orm:
