--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=5a42f96e45cc72c3d3dd03f1a08dc157
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
