--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,7 +21,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: app_login
+                target: app_home
 
             login_throttling:
                 max_attempts: 3
