--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     pictureUpload: '%kernel.project_dir%/public/img/upload'
+    avatarUpload: '%kernel.project_dir%/public/img/avatarUpload'
 
 doctrine:
      orm:
